--- a/MatchMaker.html
+++ b/MatchMaker.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>Matchmaker</h1>
-    <p>Instructions</p>
+    <p>Instructions: Read each phrase, and select the option that relates to you the most.After you've selected an option for every phrase click "Calculate Compatibility" to see how well we would get along.</p>
 
     <label>Chick Fil A is the greatest fast food restaraunt of all time</label>
     <select id="q1">
