--- a/index.html
+++ b/index.html
@@ -140,8 +140,7 @@
        
        
             document.getElementById("compatibility").innerHTML= "Your compatibility is: " + totalcompatibility;
-
-
+            console.log("tc="+totalcompatibility);
             if (totalcompatibility >=80) {
                 console.log(MESSAGE_GREAT);
                 document.getElementById('message').innerHTML = MESSAGE_GREAT;
