--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
     <button onclick="calculateCompatibility()">Calculate Compatibility</button>
     <p id="compatibility"></p>
-    <p id="message"</p>
+    <p id="message"></p>
 
     <script>
     console.log("Starting Matchmaker Lite...")
